--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextgen-fitness-server",
+  "name": "nexgen-fitness-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
