--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nexgen-fitness-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,11 +16,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/morgan": "^1.9.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status": "^1.7.4",
     "mongoose": "^8.5.1",
+    "morgan": "^1.10.0",
+    "stripe": "^16.8.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -36,5 +38,6 @@
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.16.0"
-  }
+  },
+  "description": ""
 }
